--- a/nyc_taxi_batch_processing.ipynb
+++ b/nyc_taxi_batch_processing.ipynb
@@ -8,7 +8,7 @@
     "# NYC Taxi Data - Batch Processing Implementation\n",
     "## Data Engineering Portfolio Project (DLMDSEDE02)\n",
     "\n",
-    "This notebook demonstrates the data preparation and analysis pipeline for the NYC Yellow Taxi dataset as part of a batch processing data architecture. The implementation follows the microservices design created for quarterly machine learning model training.\n",
+    "The notebook demonstrates the data preparation and analysis pipeline for the NYC Yellow Taxi dataset as part of a batch processing data architecture. The implementation follows the microservices design created for quarterly machine learning model training.\n",
     "\n",
     "### Project Overview:\n",
     "- **Dataset**: NYC Yellow Taxi Trip Data (1M+ records)\n",
